--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,7 +18,7 @@
         <a href="/image/{{this.filename}}">
           <img src="{{name}}" alt="{{name}}"style="width:100%;"></a>
       </div>
-      <button class="btn btn-danger delte btn-block mt-4" id={{this._id}}>Delete</button>
+      <button class="btn btn-danger delte btn-block mt-4" onclick="del({{this.id}})" >Delete</button>
      
       {{/each}}
 
@@ -30,11 +30,3 @@
     </div>
   </div>
 </div>
-<script>
-  $(".delte").click(function () {
-    console.log(this.id)
-    $.post(`/files/delete/${this.id}`, function () {
-      location.reload()
-    })
-  })
-</script>
